Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134695

[REG] QPdfWriter: embed font issue: generates very big pdf file on windows : the workaround doesn't work anymore

    XMLWordPrintable

Details

    • Windows
    • 09805f355 (dev), 50ef11616 (6.9), bcad638ce (tqtc/lts-6.8)

    Description

      The given workaround in https://bugreports.qt.io/browse/QTBUG-108671:

      ==> Copy the ttf file from the Resources to the temp folder, and use QFontDatabase::addApplicationFont(...) with this copy.

      This workaround for https://bugreports.qt.io/browse/QTBUG-108671 was working on Qt < 6.8 but doesn't anymore.

       

       

       

      Attachments

        1. Courier Prime.ttf
          96 kB
          Martial Reynes

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              mkdotcom2 Martial Reynes
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes